Overflow Issue

--- a/styles.css
+++ b/styles.css
@@ -42,9 +42,7 @@ main{
 h2{
    color: red;
    font-size: 2em;
-   width: 13rem;
-   overflow: hidden;
-   height: 3rem;
+   height: 2em;
 }
 .op{
    text-align: end;
